--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,13 @@
 body {
   background-color: #52796f;
 }
+
+.tableHeader {
+  font-weight: bold;
+}
+
+.container {
+  background-color: #fff;
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
