--- a/app/components/wave-canvas.html
+++ b/app/components/wave-canvas.html
@@ -15,7 +15,7 @@
             <form submit.trigger="submit()" class="">
                 <content select="form-elements"></content>
                 
-                <button show.bind="hasGenerate" type="submit" class="btn btn-sm btn-primary">Generate</button>
+                <button show.bind="hasGenerate" type="submit" class="btn btn-sm btn-primary" innerHTML.bind="buttonName">&nbsp;</button>
             </form>
             <content select="other-values"></content>
             
