--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,27 @@ a img {
   height: 75px;
 }
 
+.evalStep {
+  min-width: 640px;
+    min-height: 480px;
+    display: block;
+}
+
+.evalStep button {
+  margin: 10px;
+}
+
+.bottom-column
+{
+  float: none;
+  display: table-cell;
+  vertical-align: bottom;
+}
+
+.wizard-body {
+  min-height: 480px;
+}
+
+.table-condensed {
+  font-size: 11px;
+}
